--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@
   box-sizing: border-box;
 }
 
-
 /* Colors from Chris Yeh: https://chrisyeh96.github.io/2020/03/28/terminal-colors.html */
 :root {
   --black: rgb(0, 0, 0);
@@ -18,4 +17,37 @@
   --bright-yellow: rgb(252, 233, 79);
   --bright-blue: rgb(50, 175, 255);
   --bright-white: rgb(255, 255, 255);
+}
+
+/* Font from Fontshare: JetBrains */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-weight: 200;
+  src: url('./assets/fonts/JetBrainsMono-ExtraLight.woff2') format('woff2'),
+       url('./assets/fonts/JetBrainsMono-ExtraLight.woff') format('woff');
+}
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-weight: 400;
+  src: url('./assets/fonts/JetBrainsMono-Regular.woff2') format('woff2'),
+       url('./assets/fonts/JetBrainsMono-Regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-weight: 700;
+  src: url('./assets/fonts/JetBrainsMono-Bold.woff2') format('woff2'),
+       url('./assets/fonts/JetBrainsMono-Bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-weight: 900;
+  src: url('./assets/fonts/JetBrainsMono-ExtraBold.woff2') format('woff2'),
+       url('./assets/fonts/JetBrainsMono-ExtraBold.woff') format('woff');
+}
+
+/* Styles */
+
+h1 {
+  font-family: 'JetBrains Mono';
+  font-weight: 900;
 }
