--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,12 @@ body {
   font-weight: 400;
 }
 
+.main-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .nav {
   padding: 8px;
   display: flex;
@@ -68,7 +74,40 @@ body {
   letter-spacing: 0.5rem;
 }
 
-.main-container {
-  border: 1px solid red;
+.game-container {
+  padding: 48px;
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  border: 1px solid var(--red);
+}
+
+.grid-container {
+
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  border: 1px solid var(--bright-green);
+}
+
+.grid-item {
+  border: 1px solid var(--bright-green);
+  height: 32px;
+  width: 32px;
+}
+
+.grid-item:hover {
+  background-color: var(--green);
+  cursor: crosshair;
+}
+
+.footer {
+  border-top: 2px solid var(--bright-green);
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
