--- a/src/styles.css
+++ b/src/styles.css
@@ -74,12 +74,20 @@ body {
   letter-spacing: 0.5rem;
 }
 
-.game-container {
-  padding: 48px;
-  display: flex;
-  justify-content: space-around;
+.content-section {
   height: 100%;
-  border: 1px solid var(--red);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-container {
+  width: min(100%, 900px);
+  padding: 96px 48px;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  border: 1px solid var(--green);
 }
 
 .grid-container {
@@ -87,6 +95,8 @@ body {
 }
 
 .grid {
+  width: 322px;
+  height: 322px;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   border: 1px solid var(--bright-green);
@@ -94,8 +104,6 @@ body {
 
 .grid-item {
   border: 1px solid var(--bright-green);
-  height: 32px;
-  width: 32px;
 }
 
 .grid-item:hover {
