--- a/src/styles.css
+++ b/src/styles.css
@@ -81,6 +81,57 @@ body {
   justify-content: center;
 }
 
+/* Start Page */
+.start-game-container {
+  width: min(100%, 900px);
+  padding: 96px 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.start-game__form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.start-game__name-input {
+  outline: none;
+  padding: 4px 8px;
+  font-size: 1.2rem;
+  font-family: 'JetBrains Mono';
+  border: 2px solid var(--green);
+  background-color: var(--black);
+  color: var(--bright-green);
+}
+
+.start-game__name-input::placeholder {
+  color: var(--green)
+}
+
+.start-game__name-input:focus {
+  border-color: var(--bright-green);
+}
+
+.start-game__btn {
+  font-size: 1.2rem;
+  font-family: 'JetBrains Mono';
+  padding: 4px 8px;
+  border: none;
+  background-color: var(--green);
+  color: var(--black);
+}
+
+.start-game__btn:hover, .start-game__btn:active {
+  cursor: pointer;
+  background-color: var(--bright-green);
+}
+
+.start-game__btn:focus {
+  outline: 2px solid var(--bright-green)
+}
+
 .game-container {
   width: min(100%, 900px);
   padding: 96px 48px;
