--- a/src/styles.css
+++ b/src/styles.css
@@ -77,17 +77,19 @@ body {
 .content-section {
   height: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
 /* Start Page */
 .start-game-container {
+  margin: 48px;
   width: min(100%, 900px);
   padding: 96px 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.start-game__welcome-heading {
+  font-size: clamp(1.5rem, 3vw, 2.4rem);
+  font-weight: 400;
 }
 
 .start-game__form {
@@ -115,21 +117,20 @@ body {
 }
 
 .start-game__btn {
+  outline: none;
+  border: none;
   font-size: 1.2rem;
   font-family: 'JetBrains Mono';
   padding: 4px 8px;
-  border: none;
   background-color: var(--green);
   color: var(--black);
 }
 
-.start-game__btn:hover, .start-game__btn:active {
+.start-game__btn:hover, 
+.start-game__btn:active, 
+.start-game__btn:focus {
   cursor: pointer;
   background-color: var(--bright-green);
-}
-
-.start-game__btn:focus {
-  outline: 2px solid var(--bright-green)
 }
 
 .game-container {
