--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,21 @@ body {
   font-weight: 400;
 }
 
+button {
+  outline: none;
+  border: none;
+  font-family: 'JetBrains Mono';
+  background-color: var(--green);
+  color: var(--black);
+}
+
+button:hover, 
+button:active, 
+button:focus {
+  cursor: pointer;
+  background-color: var(--bright-green);
+}
+
 .main-container {
   height: 100vh;
   display: flex;
@@ -86,58 +101,47 @@ body {
   align-items: center;
 }
 
-/* Start Page */
-.start-game-container {
-  margin: 48px;
+/* Welcome/Setup Page */
+
+.welcome-container {
   width: min(100%, 900px);
   padding: 96px 48px;
+  display: flex;
+  flex-direction: column;
 }
 
-.start-game__welcome-heading {
+.welcome__heading {
   font-size: clamp(1.5rem, 3vw, 2.4rem);
   font-weight: 400;
 }
 
-.start-game__form {
+.game-setup-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ship-setup-container {
   display: flex;
   flex-direction: column;
-  gap: 8px;
 }
 
-.start-game__name-input {
-  outline: none;
-  padding: 4px 8px;
-  font-size: 1.2rem;
-  font-family: 'JetBrains Mono';
+.ship-setup__ship-container {
   border: 2px solid var(--green);
-  background-color: var(--black);
-  color: var(--bright-green);
+  flex-grow: 1;
 }
 
-.start-game__name-input::placeholder {
-  color: var(--green)
+.ship-setup__rotate-btn {
+  align-self: center;
 }
 
-.start-game__name-input:focus {
-  border-color: var(--bright-green);
-}
-
-.start-game__btn {
-  outline: none;
-  border: none;
+.start-game-btn {
+  margin-top: 96px;
   font-size: 1.2rem;
-  font-family: 'JetBrains Mono';
   padding: 4px 8px;
-  background-color: var(--green);
-  color: var(--black);
+  align-self: center;
 }
 
-.start-game__btn:hover, 
-.start-game__btn:active, 
-.start-game__btn:focus {
-  cursor: pointer;
-  background-color: var(--bright-green);
-}
+/* Game Page */
 
 .game-container {
   width: min(100%, 900px);
