--- a/src/styles.css
+++ b/src/styles.css
@@ -155,8 +155,6 @@ button:focus {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr, 322px;
-  /* grid-template-rows: 1fr, 322px, 1fr; */
-  /* hmm^ */
 }
 
 .grid-container__x-axis-container {
@@ -234,7 +232,6 @@ button:focus {
   padding: 8px;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
 }
 
 .footer__gh-link {
@@ -263,4 +260,14 @@ button:focus {
     box-shadow: 0px 0px 20px 5px var(--red);
     transform: scale(1.2);
   }
+}
+
+@media (max-width: 910px) {
+  .game-container {
+    padding: none;
+    border: none;
+    flex-direction: column;
+    width: auto;
+  }
+  
 }
