--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,9 @@ button {
   outline: none;
   border: none;
   font-family: 'JetBrains Mono';
-  background-color: var(--green);
+  font-size: 1.2rem;
+  padding: 4px 8px;
+  background-color: var(--bright-green);
   color: var(--black);
 }
 
@@ -71,7 +73,12 @@ button:hover,
 button:active, 
 button:focus {
   cursor: pointer;
-  background-color: var(--bright-green);
+  background-color: var(--green);
+}
+
+h2 {
+  font-size: clamp(1.5rem, 3vw, 2.4rem);
+  font-weight: 400;
 }
 
 .main-container {
@@ -101,18 +108,18 @@ button:focus {
   align-items: center;
 }
 
-/* Welcome/Setup Page */
-
-.welcome-container {
+.welcome-container, 
+.game-container, 
+.game-over-container {
   width: min(100%, 900px);
   padding: 96px 48px;
   display: flex;
-  flex-direction: column;
 }
 
-.welcome__heading {
-  font-size: clamp(1.5rem, 3vw, 2.4rem);
-  font-weight: 400;
+/* Welcome/Setup Page */
+
+.welcome-container {
+  flex-direction: column;
 }
 
 .game-setup-container {
@@ -144,9 +151,6 @@ button:focus {
 /* Game Page */
 
 .game-container {
-  width: min(100%, 900px);
-  padding: 96px 48px;
-  display: flex;
   justify-content: space-between;
   gap: 16px;
   border: 1px solid var(--green);
@@ -155,6 +159,7 @@ button:focus {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr, 322px;
+  grid-template-rows: 32px 322px 1fr;
 }
 
 .grid-container__x-axis-container {
@@ -226,6 +231,23 @@ button:focus {
   border-radius: 50%;
   background-color: var(--white);
 }
+
+/* Game Over Page */
+
+.game-over-container {
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-over__game-result {
+  text-align: center;
+}
+
+.game-over__play-again-btn {
+  margin-top: 96px;
+}
+
+/* Footer */
 
 .footer {
   border-top: 2px solid var(--bright-green);
