grid item hover only on enemy board

--- a/src/styles.css
+++ b/src/styles.css
@@ -208,7 +208,7 @@ h2 {
   height: 32px;
 }
 
-.grid-item:hover {
+.grid-container + .grid-container .grid .grid-item:hover {
   background-color: var(--bright-black);
   cursor: crosshair;
 }
