--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,10 @@ h2 {
 
 .ship-setup__ship-container {
   border: 2px solid var(--green);
-  flex-grow: 1;
+  height: 32px;
+  width: 32px;
+  /* flex-grow: 1; */
+  position: absolute;
 }
 
 .ship-setup__rotate-btn {
