--- a/src/styles.css
+++ b/src/styles.css
@@ -69,9 +69,7 @@ button {
   color: var(--black);
 }
 
-button:hover, 
-button:active, 
-button:focus {
+button:hover {
   cursor: pointer;
   background-color: var(--green);
 }
