--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,8 @@ h2 {
   flex-direction: column;
 }
 
+/* Nav */
+
 .nav {
   padding: 8px;
   display: flex;
@@ -86,6 +88,8 @@ h2 {
   font-weight: 900;
   letter-spacing: 0.5rem;
 }
+
+/* Pages Content */
 
 .content-section {
   height: 100%;
@@ -242,6 +246,8 @@ h2 {
   height: 1.3rem;
 }
 
+/* Animations */
+
 @keyframes blink {
   50% {
     opacity: 0;
@@ -263,6 +269,8 @@ h2 {
     transform: scale(1.2);
   }
 }
+
+/* Mobile */
 
 @media (max-width: 910px) {
   .game-setup-container, 
